// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar [common] example testing should match snapshot(s) for Basic 1`] = `
<div>
  Enter % complete:
  <input
    class="lucid-TextField lucid-TextField-is-single-line"
    rows="5"
    style="margin-bottom:10px;margin-top:10px"
    type="text"
    value=""
  />
  <div
    class="lucid-ProgressBar lucid-ProgressBar-default"
  >
    <title
      class="lucid-ProgressBar-title"
    />
    <div
      class="lucid-ProgressBar-bar-container"
    >
      <div
        class="lucid-ProgressBar-bar lucid-ProgressBar-bar-default lucid-ProgressBar-bar-default-is-pulsed"
      />
      <div
        class="lucid-ProgressBar-bar-overlay"
        style="width:5%"
      />
    </div>
  </div>
</div>
`;

exports[`ProgressBar [common] example testing should match snapshot(s) for Kinds 1`] = `
<div>
  <p>
    Default
  </p>
  <div
    class="lucid-ProgressBar lucid-ProgressBar-default"
  >
    <title
      class="lucid-ProgressBar-title"
    />
    <div
      class="lucid-ProgressBar-bar-container"
    >
      <div
        class="lucid-ProgressBar-bar lucid-ProgressBar-bar-default lucid-ProgressBar-bar-default-is-pulsed"
      />
      <div
        class="lucid-ProgressBar-bar-overlay"
        style="width:25%"
      />
    </div>
  </div>
  <p>
    Success
  </p>
  <div
    class="lucid-ProgressBar lucid-ProgressBar-success"
  >
    <title
      class="lucid-ProgressBar-title"
    />
    <div
      class="lucid-ProgressBar-bar-container"
    >
      <div
        class="lucid-ProgressBar-bar lucid-ProgressBar-bar-success lucid-ProgressBar-bar-success-is-pulsed"
      />
      <div
        class="lucid-ProgressBar-bar-overlay"
        style="width:25%"
      />
    </div>
  </div>
  <p>
    Warning
  </p>
  <div
    class="lucid-ProgressBar lucid-ProgressBar-warning"
  >
    <title
      class="lucid-ProgressBar-title"
    />
    <div
      class="lucid-ProgressBar-bar-container"
    >
      <div
        class="lucid-ProgressBar-bar lucid-ProgressBar-bar-warning lucid-ProgressBar-bar-warning-is-pulsed"
      />
      <div
        class="lucid-ProgressBar-bar-overlay"
        style="width:25%"
      />
    </div>
  </div>
  <p>
    Danger
  </p>
  <div
    class="lucid-ProgressBar lucid-ProgressBar-danger"
  >
    <title
      class="lucid-ProgressBar-title"
    />
    <div
      class="lucid-ProgressBar-bar-container"
    >
      <div
        class="lucid-ProgressBar-bar lucid-ProgressBar-bar-danger lucid-ProgressBar-bar-danger-is-pulsed"
      />
      <div
        class="lucid-ProgressBar-bar-overlay"
        style="width:25%"
      />
    </div>
  </div>
  <p>
    Info
  </p>
  <div
    class="lucid-ProgressBar lucid-ProgressBar-info"
  >
    <title
      class="lucid-ProgressBar-title"
    />
    <div
      class="lucid-ProgressBar-bar-container"
    >
      <div
        class="lucid-ProgressBar-bar lucid-ProgressBar-bar-info lucid-ProgressBar-bar-info-is-pulsed"
      />
      <div
        class="lucid-ProgressBar-bar-overlay"
        style="width:25%"
      />
    </div>
  </div>
</div>
`;

exports[`ProgressBar [common] example testing should match snapshot(s) for WithTitle 1`] = `
<div
  class="lucid-ProgressBar lucid-ProgressBar-default"
>
  <title
    class="lucid-ProgressBar-title"
  >
    This is a title
  </title>
  <div
    class="lucid-ProgressBar-bar-container"
  >
    <div
      class="lucid-ProgressBar-bar lucid-ProgressBar-bar-default lucid-ProgressBar-bar-default-is-pulsed"
    />
    <div
      class="lucid-ProgressBar-bar-overlay"
      style="width:25%"
    />
  </div>
</div>
`;

exports[`ProgressBar childComponents Title should render a header 1`] = `
<div
  className="lucid-ProgressBar lucid-ProgressBar-default"
>
  <title
    className="lucid-ProgressBar-title"
  >
    Title
  </title>
  <div
    className="lucid-ProgressBar-bar-container"
  >
    <div
      className="lucid-ProgressBar-bar lucid-ProgressBar-bar-default lucid-ProgressBar-bar-default-is-pulsed"
    />
    <div
      className="lucid-ProgressBar-bar-overlay"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`ProgressBar props kind should match snapshot for danger 1`] = `
<div
  className="lucid-ProgressBar lucid-ProgressBar-danger"
>
  <title
    className="lucid-ProgressBar-title"
  />
  <div
    className="lucid-ProgressBar-bar-container"
  >
    <div
      className="lucid-ProgressBar-bar lucid-ProgressBar-bar-danger lucid-ProgressBar-bar-danger-is-pulsed"
    />
    <div
      className="lucid-ProgressBar-bar-overlay"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`ProgressBar props kind should match snapshot for default 1`] = `
<div
  className="lucid-ProgressBar lucid-ProgressBar-default"
>
  <title
    className="lucid-ProgressBar-title"
  />
  <div
    className="lucid-ProgressBar-bar-container"
  >
    <div
      className="lucid-ProgressBar-bar lucid-ProgressBar-bar-default lucid-ProgressBar-bar-default-is-pulsed"
    />
    <div
      className="lucid-ProgressBar-bar-overlay"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`ProgressBar props kind should match snapshot for info 1`] = `
<div
  className="lucid-ProgressBar lucid-ProgressBar-info"
>
  <title
    className="lucid-ProgressBar-title"
  />
  <div
    className="lucid-ProgressBar-bar-container"
  >
    <div
      className="lucid-ProgressBar-bar lucid-ProgressBar-bar-info lucid-ProgressBar-bar-info-is-pulsed"
    />
    <div
      className="lucid-ProgressBar-bar-overlay"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`ProgressBar props kind should match snapshot for success 1`] = `
<div
  className="lucid-ProgressBar lucid-ProgressBar-success"
>
  <title
    className="lucid-ProgressBar-title"
  />
  <div
    className="lucid-ProgressBar-bar-container"
  >
    <div
      className="lucid-ProgressBar-bar lucid-ProgressBar-bar-success lucid-ProgressBar-bar-success-is-pulsed"
    />
    <div
      className="lucid-ProgressBar-bar-overlay"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`ProgressBar props kind should match snapshot for warning 1`] = `
<div
  className="lucid-ProgressBar lucid-ProgressBar-warning"
>
  <title
    className="lucid-ProgressBar-title"
  />
  <div
    className="lucid-ProgressBar-bar-container"
  >
    <div
      className="lucid-ProgressBar-bar lucid-ProgressBar-bar-warning lucid-ProgressBar-bar-warning-is-pulsed"
    />
    <div
      className="lucid-ProgressBar-bar-overlay"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`ProgressBar props percentComplete should display length of ProgressBar 1`] = `
<div
  className="lucid-ProgressBar lucid-ProgressBar-default"
>
  <title
    className="lucid-ProgressBar-title"
  />
  <div
    className="lucid-ProgressBar-bar-container"
  >
    <div
      className="lucid-ProgressBar-bar lucid-ProgressBar-bar-default lucid-ProgressBar-bar-default-is-pulsed"
    />
    <div
      className="lucid-ProgressBar-bar-overlay"
      style={
        Object {
          "width": "25%",
        }
      }
    />
  </div>
</div>
`;

exports[`ProgressBar render should render a ProgressBar 1`] = `
<div
  className="lucid-ProgressBar lucid-ProgressBar-default"
>
  <title
    className="lucid-ProgressBar-title"
  />
  <div
    className="lucid-ProgressBar-bar-container"
  >
    <div
      className="lucid-ProgressBar-bar lucid-ProgressBar-bar-default lucid-ProgressBar-bar-default-is-pulsed"
    />
    <div
      className="lucid-ProgressBar-bar-overlay"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;
